Adding tag cloud

--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@ ga('send', 'pageview');
 
 </script>
  
-</head>
+
+    
+
+
+
+
+
+  </head>
 
 
 <body>
@@ -176,17 +183,87 @@ ga('send', 'pageview');
     >
     
   </div>
-  <div id="tag-cloud">
-    <a href="/tag/.net-core/" class="set-1">.net-core</a> <a href="/tag/automapper/" class="set-1">automapper</a> <a href="/tag/azure/" class="set-1">azure</a> <a href="/tag/azure-functions/" class="set-1">azure-functions</a> <a href="/tag/cte/" class="set-5">cte</a> <a href="/tag/diy/" class="set-1">diy</a> <a href="/tag/office-ui-fabric/" class="set-1">office-ui-fabric</a> <a href="/tag/react/" class="set-1">react</a> <a href="/tag/sendgrid/" class="set-1">sendgrid</a> <a href="/tag/t-sql/" class="set-5">t-sql</a>
+  <div style="clear:both; padding-top:2rem;" class="container">
+  
+  
+  
+  
+
+  
+  
+  
+  
+  
+    <a href="/tag/t-sql/"
+    style="font-size: 30px; line-height:70%; text-decoration:none;">
+        t-sql
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/cte/"
+    style="font-size: 30px; line-height:70%; text-decoration:none;">
+        cte
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/react/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        react
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/office-ui-fabric/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        office-ui-fabric
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/azure/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        azure
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/azure-functions/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        azure-functions
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/sendgrid/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        sendgrid
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/diy/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        diy
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/automapper/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        automapper
+    </a>
+    <span>&nbsp;</span>
+  
+    <a href="/tag/.net-core/"
+    style="font-size: 20px; line-height:70%; text-decoration:none;">
+        .net-core
+    </a>
+    <span>&nbsp;</span>
+  
   </div>
 </div>
+
 
       </div>
    </div><!-- end .content -->
 
    <div class="footer">
    <div class="container">
-      <p class="copy">&copy; 2019 <a href="https://johanohlin.com">Johan Ohlin</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+      <p class="copy">&copy; 2019 <a href="https://www.johanohlin.com">Johan Ohlin</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
 
       <div class="footer-links"> 
          <ul class="noList"> 
