--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,14 @@ ga('send', 'pageview');
 
 </script>
  
-</head>
+
+    
+
+
+
+
+
+  </head>
 
 
 <body>
@@ -120,7 +127,7 @@ ga('send', 'pageview');
 
    <div class="footer">
    <div class="container">
-      <p class="copy">&copy; 2019 <a href="https://johanohlin.com">Johan Ohlin</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+      <p class="copy">&copy; 2019 <a href="https://www.johanohlin.com">Johan Ohlin</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
 
       <div class="footer-links"> 
          <ul class="noList"> 
