--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ title: Diving into Azure
     >
     {% endif %}
   </div>
-  <div id="tag-cloud">
-    {{ site | tag_cloud }}
-  </div>
+  {% include tag_cloud.html %}
 </div>
+
